Fixed NavBar Sizing and Spacing

--- a/index.css
+++ b/index.css
@@ -5,16 +5,29 @@ nav{
     grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr 3fr 1fr;
     height: 8vh;
     align-content: center;
+    justify-content: center;
 }
 
 .grid-item{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     font-size: 1.5rem;
 }
 
+a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #logo{
-    height: 1rem;
+    height: 8vh;  
+}
+
+body{
+    margin: 0%;
 }
 
 h1, p{
